--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "^13.1.6",
-    "@webdeveducation/next-verify-stripe": "^1.0.1",
+    "daisyui": "^5.0.50",
     "micro-cors": "^0.1.1",
     "mongodb": "^4.13.0",
+    "mongoose": "^8.6.4",
     "next": "13.1.6",
-    "numeral": "^2.0.6",
     "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.32.1",
-    "stripe": "^11.8.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jest": "^29.6.2",
     "postcss": "^8.4.21",
+    "supertest": "^6.3.3",
     "tailwindcss": "^3.2.4"
   }
 }
