update dependencies to be compatible with clerk

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,10 +1,11 @@
-OPENAI_API_KEY=
-AUTH0_SECRET=
-AUTH0_BASE_URL=
-AUTH0_ISSUER_BASE_URL=
-AUTH0_CLIENT_ID=
-AUTH0_CLIENT_SECRET=
+OPENAI_API_KEY=your+openai_api_key
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_something
+CLERK_SECRET_KEY=sk_test_something
+
+GOOGLE_OAUTH_CLIENT_ID=something.apps.googleusercontent.com
+GOOGLE_OAUTH_CLIENT_SECRET=your_clien_secret
+GOOGLE_OAUTH_REDIRECT_URL=https://better-bass-something
 MONGODB_URI=
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
+# NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+# STRIPE_SECRET_KEY=
+# STRIPE_WEBHOOK_SECRET=
