--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^2.2.1",
+    "@clerk/nextjs": "^6.31.4",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/font": "^13.1.6",
     "daisyui": "^5.0.50",
     "micro-cors": "^0.1.1",
     "mongodb": "^4.13.0",
     "mongoose": "^8.6.4",
-    "next": "13.1.6",
+    "next": "^15.2.3",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -26,7 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^15.5.0",
     "jest": "^29.6.2",
     "postcss": "^8.4.21",
     "supertest": "^6.3.3",
