--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,6 +1,10 @@
 OPENAI_API_KEY=your+openai_api_key
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_something
 CLERK_SECRET_KEY=sk_test_something
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/register
+NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL= /events
+NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/events
 
 GOOGLE_OAUTH_CLIENT_ID=something.apps.googleusercontent.com
 GOOGLE_OAUTH_CLIENT_SECRET=your_clien_secret
