--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "daisyui": "^5.0.50",
+    "googleapis": "^157.0.0",
     "micro-cors": "^0.1.1",
     "mongodb": "^4.13.0",
     "mongoose": "^8.6.4",
