--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:jest": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
@@ -33,11 +33,12 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.33.0",
     "eslint-config-next": "^15.5.0",
-    "jest": "^30.1.1",
-    "jest-environment-jsdom": "^30.1.1",
+    "jsdom": "^26.1.0",
     "next-router-mock": "^1.0.2",
     "postcss": "^8.4.21",
     "supertest": "^6.3.3",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4"
   }
 }
