--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "daisyui": "^5.0.50",
+    "@tailwindcss/postcss": "^4.1.12",
     "date-fns": "^4.1.0",
     "googleapis": "^157.0.0",
     "micro-cors": "^0.1.1",
@@ -25,12 +26,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@jest/globals": "^30.1.1",
     "autoprefixer": "^10.4.13",
+    "daisyui": "^5.0.51",
     "eslint": "8.33.0",
     "eslint-config-next": "^15.5.0",
-    "jest": "^29.6.2",
+    "jest": "^29.7.0",
+    "node-mocks-http": "^1.17.2",
     "postcss": "^8.4.21",
     "supertest": "^6.3.3",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^4.1.12"
   }
 }
