--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
     "@jest/globals": "^30.1.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.7.0",
     "daisyui": "^5.0.51",
     "eslint": "8.33.0",
     "eslint-config-next": "^15.5.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "node-mocks-http": "^1.17.2",
     "postcss": "^8.4.21",
     "supertest": "^6.3.3",
