vibe coded solution to get getplan working

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "date-fns": "^4.1.0",
     "googleapis": "^157.0.0",
+    "json5": "^2.2.3",
     "micro-cors": "^0.1.1",
     "mongodb": "^4.17.2",
     "mongoose": "^8.6.4",
