--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@jest/globals": "^30.1.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "autoprefixer": "^10.4.13",
     "babel-jest": "^30.1.1",
     "daisyui": "^5.0.51",
