--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^15.2.3",
     "openai": "^3.2.1",
     "react": "18.2.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
