--- a/.env.local.sample
+++ b/.env.local.sample
@@ -3,13 +3,13 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_something
 CLERK_SECRET_KEY=sk_test_something
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/register
-NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL= /events
-NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/events
+NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL= /
+NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/
 
 GOOGLE_OAUTH_CLIENT_ID=something.apps.googleusercontent.com
 GOOGLE_OAUTH_CLIENT_SECRET=your_clien_secret
 GOOGLE_OAUTH_REDIRECT_URL=https://better-bass-something
-MONGODB_URI=
+MONGODB_URI=yourmongodburi
 # NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 # STRIPE_SECRET_KEY=
 # STRIPE_WEBHOOK_SECRET=
